--- a/package.json
+++ b/package.json
@@ -63,13 +63,14 @@
     "rollup-plugin-sourcemaps": "^0.4.2",
     "rollup-plugin-typescript2": "^0.11.1",
     "ts-jest": "^22.0.0",
-    "tslint": "^5.8.0",
+    "tslint": "^5.10.0",
     "tslint-config-standard": "^7.0.0",
     "typescript": "^2.8.3"
   },
   "dependencies": {
     "@types/node": "^10.0.8",
     "@types/react": "^16.3.14",
+    "hoist-non-react-statics": "^2.5.0",
     "react": "^16.3.2"
   }
 }
