--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "Walker Henderson <wjahenderson@gmail.com>",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/reklawnos/react-rp-to-hoc.git"
   },
   "license": "MIT",
   "engines": {
