--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "keywords": [],
   "main": "dist/rp-to-hoc.umd.js",
   "module": "dist/rp-to-hoc.es5.js",
-  "typings": "dist/types/rp-to-hoc.d.ts",
+  "typings": "dist/types/index.d.ts",
   "files": [
     "dist"
   ],
@@ -54,7 +54,12 @@
   },
   "devDependencies": {
     "@types/jest": "^22.0.0",
+    "@types/node": "^10.0.8",
+    "@types/react": "^16.3.14",
+    "@types/react-dom": "^16.0.5",
     "jest": "^22.0.2",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "rimraf": "^2.6.1",
     "rollup": "^0.57.0",
     "rollup-plugin-commonjs": "^9.0.0",
@@ -68,12 +73,10 @@
     "typescript": "^2.8.3"
   },
   "dependencies": {
-    "@types/node": "^10.0.8",
-    "@types/react": "^16.3.14",
     "hoist-non-react-statics": "^2.5.0"
   },
   "peerDependencies": {
-      "react": "^16.0.0",
-      "react-dom": "^16.0.0"
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
   }
 }
