Fix issue with generics

--- a/package.json
+++ b/package.json
@@ -28,10 +28,15 @@
     "test:prod": "npm run lint && npm run test -- --coverage --no-cache"
   },
   "jest": {
-    "transform": {
-      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    "globals": {
+      "ts-jest": {
+        "enableTsDiagnostics": true
+      }
     },
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
     "moduleFileExtensions": [
       "ts",
       "tsx",
@@ -55,11 +60,12 @@
   "devDependencies": {
     "@types/jest": "^22.0.0",
     "@types/node": "^10.0.8",
-    "@types/react": "^16.3.14",
+    "@types/react": "^16.3.17",
     "@types/react-dom": "^16.0.5",
     "jest": "^22.0.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "request": "^2.87.0",
     "rimraf": "^2.6.1",
     "rollup": "^0.57.0",
     "rollup-plugin-commonjs": "^9.0.0",
